# Logging-System-Cpp

./: .gitignore  CMakeLists.txt  README.md  commonapi.ini  data.txt  gpu.fdepl  vsomeip-local.json
app/: CMakeLists.txt
app/src/: DataLogger.cpp  DataLogger.hpp  main.cpp  someipmain.cpp
docs/logging/: ConsoleSink.md  FileSink.md  FileSink_src.md  FileTelemetrySrc.md  FileTelemetrySrc_src.md  GPUTelemetryServer.md  GPUTelemetryServer_src.md  ILogSink.md  ITelemetrySrc.md  LogFormatter.md  LogFormatter_src.md  LogManager.md  LogManager_src.md  LogMessage.md  LogMessage_src.md  Policy_Cpu.md  Policy_Cpu_src.md  Policy_Gpu.md  Policy_Ram.md  RingBuffer.md  SafeFile.md  SafeFile_src.md  SafeSocket.md  SafeSocket_src.md  SocketTelemetrySrc_src.md  SomeIPTelemetrySrcImpl.md  ThreadPool.md  enums.md
logging/: CMakeLists.txt
logging/inc/: ConsoleSink.hpp  FileSink.hpp  FileTelemetrySrc.hpp  GPUTelemetryServer.hpp  ILogSink.hpp  ITelemetrySrc.hpp  LogFormatter.hpp  LogManager.hpp  LogMessage.hpp  RingBuffer.hpp  SafeFile.hpp  SafeSocket.hpp  SocketTelemetrySrc.hpp  SomeIPTelemetrySrcImpl.hpp  ThreadPool.hpp  enums.hpp
logging/inc/Policy_classes/: Cpu_policy.hpp  Gpu_policy.hpp  Ram_policy.hpp
logging/src/: ConsoleSink.cpp  FileSink.cpp  FileTelemetrySrc.cpp  GPUTelemetryServer.cpp  LogFormatter.cpp  LogManager.cpp  LogMessage.cpp  SafeFile.cpp  SafeSocket.cpp  SocketTelemetrySrc.cpp  SomeIPTelemetrySrcImpl.cpp
logging/src/Policy_classes/: Cpu_policy.cpp  Gpu_policy.cpp  Ram_policy.cpp
